# Hi-Drift

./: .gitignore  ARCHITECTURE.md  DOCUMENTATION.md  ICCV_PLAN.md  IMPLEMENTATION_TRACKER.md  Makefile  PRESENTATION_BRIEF.md  README.md  TESTING.md  pyproject.toml
configs/drift/: default.yaml
configs/eval/: benchmark_manifest.json  benchmark_registry.json  benchmark_registry_iccv.json  default.yaml  iccv_policy.json  matrix_iccv.json  matrix_main.json  matrix_publishable.json  official_benchmark_manifest.json  publication_policy.json  seeds.yaml
configs/memory/: default.yaml
configs/model/: default.yaml
data/benchmarks/: semi_real_trace.jsonl
paper/: RESULTS_INTERPRETATION.md  formal_definitions.md  outline.md
paper/tables/: aggregate_metrics.json  aggregate_metrics.md  benchmark_registry_check.json  benchmark_registry_check.md  cost_latency_table.md  hybrid_semantic_metrics.md  hypothesis_results.md  iccv_benchmark_registry_check.json  iccv_benchmark_registry_check.md  iccv_publication_readiness.json  iccv_publication_readiness.md  iccv_readiness_summary.json  publication_readiness.json  publication_readiness.md  qualitative_failure_cases.md  scenario_metrics.md  significance_report.md
scripts/: check_benchmark_registry.py  check_gemini.py  check_iccv_readiness.py  check_publication_readiness.py  export_figures.py  prepare_official_benchmarks.py  run_eval.py  run_eval_matrix.py  run_experiment_live.py  run_live_demo.py  train_calibrator.py
src/hidrift/: __init__.py  api.py  env.py  schemas.py  utils.py
tests/integration/: test_hybrid_semantic_flow.py  (+1 more)
(+46 files in other folders)
