[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hidrift"
version = "0.1.0"
description = "Drift-aware hierarchical memory consolidation for long-horizon agents."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.7.0",
  "numpy>=1.26.0",
  "google-genai>=1.33.0",
  "networkx>=3.3",
]

[project.optional-dependencies]
api = ["fastapi>=0.115.0", "uvicorn>=0.30.0"]
dev = ["pytest>=8.2.0", "hypothesis>=6.100.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
